--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 31
     defaultConfig {
         applicationId 'com.TeddyNight.notificationpush'
-        minSdkVersion 21
+        minSdk 26
         targetSdkVersion 31
         versionCode 30
         versionName "1.1.6"
